# rp2040_ov2640

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aps6404.c  aps6404.h  aps6404.pio  image.pio  lwipopts.h  main.c  ov2640.c  ov2640.h  ov2640_init.h  pcf_rtc.c  pcf_rtc.h  pimoroni_pico_import.cmake  sdcard.c
scripts/: image_read.py
